--- a/upload.html
+++ b/upload.html
@@ -2,297 +2,89 @@
 <html lang="pl">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ARKON — Upload plików (IndexedDB + Supabase)</title>
-<meta name="description" content="Lokalny odczyt/zapis plików do IndexedDB oraz opcjonalny upload do Supabase Storage (bucket: pliki).">
-
-<!-- Supabase (CDN) -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
+<title>Test upload (IndexedDB)</title>
 <style>
-  :root{
-    --bg:#0b1020;--p1:#0f1533;--p2:#121a38;--ink:#e7ecff;--muted:#aeb8da;--line:#223066;
-    --accent:#4cc9f0;--ok:#2fbf71;--bad:#ff6b6b;--warn:#ffb84d;
-    --chip:#0d1530;--chip2:#152056;--field:#0e1330;
-  }
-  *{box-sizing:border-box}
-  html,body{margin:0;height:100%}
-  body{background:linear-gradient(180deg,#0a0f1e,#0c1230 60%,#0a0f1e);color:var(--ink);font:15px/1.5 system-ui,Segoe UI,Roboto,Arial}
-  a{color:#cfe1ff;text-decoration:none}
-  header{padding:16px;background:#11183a;border-bottom:1px solid var(--line)}
-  header h1{margin:0;font-size:22px}
-  .wrap{max-width:1100px;margin:auto;padding:16px}
-  .card{background:linear-gradient(180deg,var(--p1),var(--p2));border:1px solid var(--line);border-radius:14px;padding:14px}
-  .row{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
-  .small{font-size:12px;color:var(--muted)}
-  .pill{display:inline-flex;align-items:center;gap:8px;background:#0d1530;border:1px dashed #2b3a77;border-radius:999px;padding:6px 10px;color:#aeb8da;font-size:13px}
-  .btn{background:#233261;border:1px solid #3a4ca3;color:#fff;border-radius:10px;padding:8px 12px;cursor:pointer}
-  .btn.ghost{background:transparent;border:1px dashed #3a4ca3}
-  input,select{background:var(--field);border:1px solid #28356c;border-radius:10px;padding:8px 10px;color:var(--ink);font:inherit}
-  input::placeholder{color:#aeb8da99}
-  .table{width:100%;border-collapse:separate;border-spacing:0}
-  .table th,.table td{padding:9px;border-bottom:1px solid #22325f;text-align:left;vertical-align:top;white-space:nowrap}
-  .scroll{overflow:auto}
+body{font-family:sans-serif;background:#0b1020;color:#eee;padding:20px}
+.card{background:#121a38;padding:14px;border-radius:10px}
+.btn{padding:6px 12px;border:1px solid #3a4ca3;background:#233261;color:#fff;border-radius:6px;cursor:pointer}
+.table{width:100%;border-collapse:collapse;margin-top:12px}
+.table th,.table td{border:1px solid #334;padding:6px}
 </style>
 </head>
 <body>
-<header>
-  <h1>Upload plików • ARKON</h1>
-  <div class="small">Pliki trafiają lokalnie do IndexedDB i (opcjonalnie) do Supabase Storage (<b>pliki</b>).</div>
-</header>
+<h1>Test zapisu plików w IndexedDB</h1>
 
-<div class="wrap">
-  <section class="card">
-    <div class="row" style="margin-bottom:8px">
-      <select id="selClient" title="Klient" style="min-width:280px"></select>
-      <select id="selCat">
-        <option>Umowa z firmą</option>
-        <option>Audyt</option>
-        <option>Oferta (PDF)</option>
-        <option>Ulotka</option>
-        <option>Inne</option>
-      </select>
-      <input id="tags" placeholder="tagi, przecinkami">
-      <label class="btn">Dodaj pliki… <input id="inFiles" type="file" multiple hidden></label>
-      <label class="pill" style="cursor:pointer">
-        <input id="toCloud" type="checkbox" checked>
-        Wyślij do chmury (Supabase)
-      </label>
-      <span id="cloudState" class="pill">Chmura: sprawdzanie…</span>
-      <button id="btnRefresh" class="btn ghost">Odśwież</button>
-    </div>
-    <div class="small">Uwaga: jeśli masz puste listy klientów, przyciski nadal działają – pliki zapisują się bez przypisania.</div>
+<div class="card">
+  <label class="btn">Dodaj plik<input id="inFile" type="file" hidden></label>
+  <button class="btn" onclick="renderFiles()">Odśwież listę</button>
 
-    <div class="card" style="margin-top:10px">
-      <div class="row" style="margin-bottom:6px">
-        <input id="qFiles" placeholder="🔎 filtr: nazwa/typ/kategoria/tag/klient…" style="min-width:260px">
-        <select id="fCat"><option value="">Kategoria (wszystkie)</option></select>
-        <button id="btnClear" class="btn ghost">Wyczyść filtr</button>
-        <span class="pill">Widocznych: <b id="filesVis">0</b></span>
-      </div>
-      <div class="scroll" style="max-height:420px">
-        <table class="table" id="tblFiles">
-          <thead>
-            <tr>
-              <th>Akcje</th><th>Nazwa</th><th>Klient</th><th>Kategoria</th>
-              <th>Tagi</th><th>Typ</th><th>Rozmiar</th><th>Data</th>
-            </tr>
-          </thead>
-          <tbody id="tbFiles"></tbody>
-        </table>
-      </div>
-    </div>
-  </section>
+  <table class="table">
+    <thead><tr><th>Akcje</th><th>Nazwa</th><th>Typ</th><th>Rozmiar</th><th>Data</th></tr></thead>
+    <tbody id="tb"></tbody>
+  </table>
 </div>
 
 <script>
-'use strict';
-
-/* ===== helpers ===== */
-const $=s=>document.querySelector(s);
-const $$=s=>Array.from(document.querySelectorAll(s));
-const INT0=new Intl.NumberFormat('pl-PL',{maximumFractionDigits:0});
-const fmt=n=>isFinite(n)?INT0.format(Math.round(n)):'—';
-const bytes=n=>n<1024? n+' B' : n<1048576? (n/1024).toFixed(1)+' KB' : n<1073741824? (n/1048576).toFixed(1)+' MB' : (n/1073741824).toFixed(1)+' GB';
-const uid=()=> 'ID_'+Date.now().toString(36)+'_'+Math.random().toString(36).slice(2);
-function esc(s){return (s||'').toString().replace(/[&<>"]/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c]))}
-function debounce(fn,ms){ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn(...a),ms||180); }; }
-
-/* ===== clients (dummy loader; podłączysz swoje localStorage kiedy chcesz) ===== */
-function loadClients(){
-  // spróbuj z obu kluczy, jeśli puste – daj pustą listę
-  let a=[];
-  try{ a = JSON.parse(localStorage.getItem('arkon_clients_v1')||'[]'); }catch{}
-  if(!Array.isArray(a) || !a.length){
-    try{ a = JSON.parse(localStorage.getItem('arkon_clients_v2')||'[]'); }catch{}
-  }
-  return Array.isArray(a)?a:[];
-}
-
-/* ===== IndexedDB ===== */
 let db;
+const uid=()=> 'ID_'+Date.now().toString(36)+'_'+Math.random().toString(36).slice(2);
+const bytes=n=>n<1024? n+' B':n<1048576?(n/1024).toFixed(1)+' KB':(n/1048576).toFixed(1)+' MB';
+
 function dbOpen(){
   return new Promise((res,rej)=>{
-    const r=indexedDB.open('arkonCRM_local',2);
-    r.onupgradeneeded=()=>{const d=r.result; if(!d.objectStoreNames.contains('files')) d.createObjectStore('files',{keyPath:'id'});};
-    r.onsuccess=()=>{db=r.result; res();};
+    const r=indexedDB.open('arkonCRM_test',1);
+    r.onupgradeneeded=()=>{const d=r.result;
+      if(!d.objectStoreNames.contains('files')) d.createObjectStore('files',{keyPath:'id'});
+    };
+    r.onsuccess=()=>{db=r.result;res();};
     r.onerror=()=>rej(r.error);
   });
 }
-const dbPut=(o)=>new Promise((res,rej)=>{const tx=db.transaction('files','readwrite'); tx.objectStore('files').put(o); tx.oncomplete=()=>res(); tx.onerror=()=>rej(tx.error);});
-const dbGet=(id)=>new Promise((res,rej)=>{const tx=db.transaction('files','readonly'); const rq=tx.objectStore('files').get(id); rq.onsuccess=()=>res(rq.result); rq.onerror=()=>rej(rq.error);});
-const dbAll=()=>new Promise((res,rej)=>{const tx=db.transaction('files','readonly'); const rq=tx.objectStore('files').getAll(); rq.onsuccess=()=>res(rq.result||[]); rq.onerror=()=>rej(rq.error);});
-const dbDel=(id)=>new Promise((res,rej)=>{const tx=db.transaction('files','readwrite'); tx.objectStore('files').delete(id); tx.oncomplete=()=>res(); tx.onerror=()=>rej(tx.error);});
+function dbPut(o){return new Promise((res,rej)=>{const tx=db.transaction('files','readwrite');tx.objectStore('files').put(o);tx.oncomplete=()=>res();tx.onerror=()=>rej(tx.error);});}
+function dbGetAll(){return new Promise((res,rej)=>{const tx=db.transaction('files','readonly');const rq=tx.objectStore('files').getAll();rq.onsuccess=()=>res(rq.result||[]);rq.onerror=()=>rej(rq.error);});}
+function dbGet(id){return new Promise((res,rej)=>{const tx=db.transaction('files','readonly');const rq=tx.objectStore('files').get(id);rq.onsuccess=()=>res(rq.result);rq.onerror=()=>rej(rq.error);});}
+function dbDel(id){return new Promise((res,rej)=>{const tx=db.transaction('files','readwrite');tx.objectStore('files').delete(id);tx.oncomplete=()=>res();tx.onerror=()=>rej(tx.error);});}
 
-/* ===== Supabase config ===== */
-const SUPA_URL = 'https://phxxjirqlktzcwnygaha.supabase.co';
-const SUPA_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBoeHhqaXJxbGt0emN3bnlnYWhhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU4NjAxODgsImV4cCI6MjA3MTQzNjE4OH0.tUjENk3OgBM1bHcnBm_QCFn17fwYn2N6uVp6Yf2PsJQ'; // anon
-const supa = window.supabase.createClient(SUPA_URL, SUPA_KEY);
-const BUCKET = 'pliki';
-const ACCOUNT_ID = (localStorage.getItem('arkon_account_id') || 'arkon-crm').toLowerCase();
-
-function setCloudState(txt, ok){
-  const el = $('#cloudState'); if(!el) return;
-  el.textContent = txt;
-  el.style.borderColor = ok ? '#2e925e' : '#7b3341';
-  el.style.background = ok ? '#0f2c22' : '#2e1117';
-}
-// ping
-async function supaPing(){
-  try{
-    const { error } = await supa.storage.from(BUCKET).list('upload', { limit: 1 });
-    if(error) throw error;
-    setCloudState('Chmura: połączono ✓', true);
-  }catch(e){
-    setCloudState('Chmura: błąd (bucket/polityki)', false);
-    console.warn('Supabase ping error:', e);
-  }
-}
-
-function safeName(name){
-  return String(name||'plik')
-    .normalize('NFKD')
-    .replace(/[^\w.\-]+/g,'_')
-    .replace(/_+/g,'_')
-    .toLowerCase();
-}
-function buildPath({clientId, file}){
-  const who  = (clientId || 'bez-klienta').toLowerCase();
-  const ts   = new Date().toISOString().replace(/[:.]/g,'-');
-  return `upload/${who}/${ts}_${safeName(file.name)}`;
-}
-async function uploadToSupabase({file, clientId, clientName, category, tags}){
-  const path = buildPath({clientId, file});
-  const { error: upErr } = await supa
-    .storage.from(BUCKET)
-    .upload(path, file, { upsert:true, cacheControl:'3600', contentType: file.type || 'application/octet-stream' });
-  if (upErr) throw upErr;
-  const { data: pub } = supa.storage.from(BUCKET).getPublicUrl(path);
-  const file_url = pub?.publicUrl || null;
-  // opcjonalne metadane
-  try{
-    await supa.from('files').insert({
-      account_id: ACCOUNT_ID,
-      client_id:  clientId || '',
-      client_name: clientName || '',
-      category:   category || '',
-      tags:       tags || '',
-      file_name:  file.name,
-      file_path:  path,
-      file_url:   file_url,
-      author:     ACCOUNT_ID,
-      uploaded_at: new Date().toISOString()
-    });
-  }catch(e){ console.info('files meta insert skipped/failed:', e?.message || e); }
-  return { path, file_url };
-}
-
-/* ===== UI fill ===== */
-function fillClients(selIds){
-  const clients = loadClients();
-  selIds.forEach(id=>{
-    const el = document.getElementById(id);
-    if(!el) return;
-    el.innerHTML = '<option value="">(bez przypisania)</option>' + clients.map(c=>`<option value="${c.id}">${esc(c.name||'')}</option>`).join('');
-  });
-}
-
-/* ===== Files flow ===== */
-let fileFilter={q:'',cat:''};
-
-async function handleFiles(files){
-  const clientId   = $('#selClient').value || '';
-  const clientName = clientId ? (loadClients().find(c=>c.id===clientId)?.name||'') : '';
-  const category   = $('#selCat').value || 'Inne';
-  const tags       = $('#tags').value || '';
-  const toCloud    = !!$('#toCloud')?.checked;
-
-  for(const f of Array.from(files||[])){
-    const id=uid();
-    // local save
-    await dbPut({ id, name:f.name, type:f.type||'application/octet-stream', size:f.size, blob:f, at:Date.now(),
-      category, clientId, clientName, origin:'upload', tags });
-    // cloud
-    if(toCloud){
-      try{
-        const { file_url } = await uploadToSupabase({ file:f, clientId, clientName, category, tags });
-        console.log('Uploaded to cloud:', file_url);
-        setCloudState('Chmura: wysłano ✓', true);
-      }catch(e){
-        console.error('Cloud upload error:', e);
-        setCloudState('Chmura: błąd wysyłki', false);
-      }
-    }
-  }
+async function handleFile(file){
+  const rec={id:uid(),name:file.name,type:file.type,size:file.size,blob:file,at:Date.now()};
+  await dbPut(rec);
   renderFiles();
 }
 
 async function renderFiles(){
-  const list = await dbAll();
-  const q=(fileFilter.q||'').toLowerCase();
-  const cat = fileFilter.cat||'';
-  const tb = $('#tbFiles'); tb.innerHTML='';
-  const cats = new Set();
-  list.sort((a,b)=>(b.at||0)-(a.at||0)).forEach(rec=>cats.add(rec.category||''));
-  $('#fCat').innerHTML = '<option value="">Kategoria (wszystkie)</option>' + Array.from(cats).filter(Boolean).map(c=>`<option ${cat===c?'selected':''}>${esc(c)}</option>`).join('');
-  let vis=0;
-  list.filter(x=>{
-    if(cat && (x.category||'')!==cat) return false;
-    const hay=[x.name,x.clientName,x.category,x.type,x.tags].join(' ').toLowerCase();
-    return !q || hay.includes(q);
-  }).forEach(rec=>{
-    vis++;
+  const list=await dbGetAll();
+  const tb=document.getElementById('tb'); tb.innerHTML='';
+  list.sort((a,b)=>b.at-a.at).forEach(rec=>{
     const tr=document.createElement('tr');
-    const when=rec.at? new Date(rec.at).toLocaleString('pl-PL'):'';
-    tr.innerHTML = `
-      <td class="row">
-        <button class="btn ghost" data-dl="${rec.id}">Pobierz</button>
-        <button class="btn" data-edit="${rec.id}">Edytuj</button>
-        <button class="btn bad" data-del="${rec.id}">Usuń</button>
+    tr.innerHTML=`
+      <td>
+        <button onclick="downloadFile('${rec.id}')">⬇</button>
+        <button onclick="deleteFile('${rec.id}')">❌</button>
       </td>
-      <td>${esc(rec.name)}</td>
-      <td>${esc(rec.clientName||'')}</td>
-      <td>${esc(rec.category||'')}</td>
-      <td>${esc(rec.tags||'')}</td>
-      <td>${esc(rec.type||'')}</td>
-      <td>${bytes(rec.size||0)}</td>
-      <td>${when}</td>`;
+      <td>${rec.name}</td>
+      <td>${rec.type}</td>
+      <td>${bytes(rec.size)}</td>
+      <td>${new Date(rec.at).toLocaleString()}</td>`;
     tb.appendChild(tr);
   });
-  $('#filesVis').textContent = vis;
-
-  tb.querySelectorAll('[data-dl]').forEach(b=>b.addEventListener('click', async ()=>{
-    const rec=await dbGet(b.dataset.dl); if(!rec){ alert('Plik niedostępny.'); return; }
-    const url=URL.createObjectURL(rec.blob); const a=document.createElement('a'); a.href=url; a.download=rec.name; a.click(); setTimeout(()=>URL.revokeObjectURL(url),1500);
-  }));
-  tb.querySelectorAll('[data-del]').forEach(b=>b.addEventListener('click', async ()=>{
-    if(!confirm('Usunąć plik?')) return; await dbDel(b.dataset.del); renderFiles();
-  }));
-  tb.querySelectorAll('[data-edit]').forEach(b=>b.addEventListener('click', async ()=>{
-    const rec=await dbGet(b.dataset.edit); if(!rec){ alert('Brak pliku.'); return; }
-    const newName = prompt('Nowa nazwa pliku', rec.name) || rec.name;
-    const newCat = prompt('Kategoria', rec.category||'') || rec.category||'';
-    const newTags = prompt('Tagi (przecinkami)', rec.tags||'') || rec.tags||'';
-    const clientId = prompt('ID klienta (puste = bez przypisania)', rec.clientId||'') || '';
-    const clientName = clientId ? (loadClients().find(c=>c.id===clientId)?.name||'') : '';
-    await dbPut({...rec, name:newName, category:newCat, tags:newTags, clientId, clientName });
-    renderFiles();
-  }));
 }
 
-/* ===== INIT ===== */
-(async function init(){
-  await dbOpen();
-  fillClients(['selClient']);
-  $('#inFiles')?.addEventListener('change',e=>{ handleFiles(e.target.files); e.target.value=''; });
-  $('#btnRefresh')?.addEventListener('click',renderFiles);
-  $('#qFiles')?.addEventListener('input', e=>{ fileFilter.q=e.target.value.trim(); renderFiles(); });
-  $('#btnClear')?.addEventListener('click',()=>{ fileFilter={q:'',cat:''}; $('#qFiles').value=''; $('#fCat').value=''; renderFiles(); });
-  $('#fCat')?.addEventListener('change', e=>{ fileFilter.cat=e.target.value||''; renderFiles(); });
+async function downloadFile(id){
+  const rec=await dbGet(id); if(!rec) return alert('Brak pliku');
+  const url=URL.createObjectURL(rec.blob);
+  const a=document.createElement('a');
+  a.href=url; a.download=rec.name; a.click();
+  setTimeout(()=>URL.revokeObjectURL(url),1500);
+}
+async function deleteFile(id){
+  await dbDel(id); renderFiles();
+}
 
-  renderFiles();
-  supaPing();
-})();
+document.getElementById('inFile').addEventListener('change',e=>{
+  const f=e.target.files[0]; if(f) handleFile(f);
+  e.target.value='';
+});
+
+(async()=>{ await dbOpen(); renderFiles(); })();
 </script>
 </body>
 </html>
