--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ARKON CRM — Pulpit / Indeks</title>
+<title>ARKON — Pulpit / Indeks</title>
 <meta name="description" content="Strona główna ARKON CRM: logowanie, szybkie podglądy, skróty, ostatnie rekordy, nawigacja do wszystkich modułów.">
 <link rel="icon" type="image/svg+xml" href="pv-icon.svg">
 <link rel="alternate icon" href="pv-icon.svg">
