--- a/chat.html
+++ b/chat.html
@@ -1,3 +1,175 @@
+<!doctype html>
+<html lang="pl">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>ARKON • Sypasny Komunikator</title>
+<meta name="description" content="Rozbudowany komunikator ARKON na Supabase: prywatne pokoje, realtime, presence, typing, emoji, reakcje, załączniki, wątki, eksport, router.">
+<link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+<style>
+  :root{
+    --bg:#0b1020; --p1:#101736; --p2:#0f1a44; --ink:#e8edff; --muted:#aeb8da; --accent:#4cc9f0;
+    --ok:#2b8a57; --bad:#ff6b6b; --line:#253166; --chip:#162357; --card:#0f1533; --hover:#172152;
+  }
+  *{box-sizing:border-box}
+  html,body{height:100%}
+  body{margin:0;background:linear-gradient(180deg,#0a0f1e,#0c1230 55%,#0a0f1e);color:var(--ink);font:15px/1.5 system-ui,Segoe UI,Roboto,Arial}
+  header{padding:12px 16px;border-bottom:1px solid var(--line);background:#11183a;position:sticky;top:0;z-index:5}
+  h1{margin:0;font-size:20px}
+  .wrap{display:grid;grid-template-columns:300px 1fr;gap:12px;height:calc(100% - 58px);padding:12px;max-width:1500px;margin:auto}
+  .panel{background:linear-gradient(180deg,var(--p1),var(--p2));border:1px solid var(--line);border-radius:14px;overflow:hidden}
+  .left{display:flex;flex-direction:column}
+  .section{padding:10px;border-bottom:1px solid var(--line)}
+  .list{overflow:auto;min-height:120px;max-height:38vh}
+  .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+  .pill{display:inline-flex;align-items:center;gap:6px;background:#0d1530;border:1px dashed #2b3a77;border-radius:999px;padding:6px 10px;color:#aeb8da;font-size:12px}
+  .btn{background:#233261;border:1px solid #3a4ca3;color:#fff;border-radius:10px;padding:9px 12px;cursor:pointer}
+  .btn.ghost{background:transparent;border:1px dashed #3a4ca3}
+  .btn.ok{background:#194d34;border-color:var(--ok)}
+  .btn.bad{background:#42202a;border-color:#7b3341}
+  input,select,textarea{width:100%;background:#0d1530;border:1px solid #28356c;border-radius:10px;padding:9px;color:var(--ink)}
+  .topbar{display:flex;justify-content:space-between;align-items:center;padding:10px 12px;border-bottom:1px solid var(--line)}
+  .meta{font-size:11px;color:#aeb8da}
+  .badge{display:inline-block;padding:1px 6px;border:1px solid #5672d1;border-radius:999px;font-size:10px;background:#0e184a;color:#cfe1ff}
+  .msg-wrap{height:calc(100% - 200px);overflow:auto;padding:12px;display:flex;flex-direction:column;gap:10px}
+  .day{display:flex;align-items:center;gap:10px;margin:2px 0}
+  .day::before,.day::after{content:"";height:1px;background:#223160;flex:1}
+  .msg{display:grid;grid-template-columns:auto 1fr;gap:8px;align-items:flex-start}
+  .bubble{background:linear-gradient(180deg,#111a3c,#0f1a44);border:1px solid #2a3a75;border-radius:12px;padding:8px 10px;max-width:980px;word-break:break-word}
+  .bubble.me{background:#16204d;border-color:#3d58c1}
+  .bubble .tools{display:flex;gap:6px;opacity:.85;margin-top:4px}
+  .bubble .tools .btn-icon{background:transparent;border:1px solid #2d3e86;border-radius:8px;padding:2px 6px;cursor:pointer}
+  .bubble .file{display:inline-flex;gap:6px;align-items:center;padding:3px 6px;border:1px dashed #3a4ca3;border-radius:8px;margin-top:4px}
+  .reactions{display:flex;gap:4px;margin-top:4px;flex-wrap:wrap}
+  .react{background:#0e184a;border:1px solid #3f57c1;border-radius:999px;padding:2px 6px;font-size:12px;cursor:pointer}
+  .children{margin-left:22px;margin-top:6px;border-left:1px dashed #2b3a77;padding-left:10px}
+  .composer{border-top:1px solid var(--line);padding:10px;display:grid;grid-template-columns:1fr auto;gap:8px}
+  .toolbar{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
+  .tabbar{display:flex;gap:8px}
+  .tab{padding:6px 10px;border:1px solid #2b3a77;border-radius:999px;cursor:pointer;font-size:12px}
+  .tab.active{background:#14225a}
+  .typing{font-size:12px;color:#9cc3ff}
+  .presence{display:flex;gap:6px;flex-wrap:wrap}
+  .dot{width:8px;height:8px;border-radius:50%;background:#4ade80;display:inline-block}
+  .search{display:grid;grid-template-columns:1fr auto;gap:6px}
+  .loadmore{padding:8px 10px;text-align:center;border:1px dashed #2b3a77;border-radius:10px;cursor:pointer;background:#0d1530}
+  .hoverable:hover{background:var(--hover)}
+  @media(max-width:1060px){ .wrap{grid-template-columns:1fr} .msg-wrap{height:50vh} }
+</style>
+</head>
+<body>
+<header>
+  <h1 style="display:flex;align-items:center;gap:10px;margin-bottom:6px">Komunikator • ARKON <span class="badge">Supabase</span></h1>
+  <div class="tabbar">
+    <a class="tab" href="#/chat">💬 Czat</a>
+    <a class="tab" href="#/contracts">📄 Umowy</a>
+    <a class="tab" href="#/docs">📂 Dokumenty</a>
+    <a class="tab" href="#/tasks">✅ Zadania</a>
+  </div>
+</header>
+
+<div class="wrap">
+  <!-- LEWY PANEL -->
+  <aside class="panel left" id="left">
+    <div class="section">
+      <div class="meta">Pokoje prywatne</div>
+      <div class="row" style="margin-top:6px">
+        <button class="btn ghost" onclick="setRoom('krolowa')">👑 Królowa</button>
+        <button class="btn ghost" onclick="setRoom('adrian')">👤 Adrian</button>
+        <button class="btn ghost" onclick="setRoom('emil')">👤 Emil</button>
+        <button class="btn ghost" onclick="setRoom('global')">🌍 Wspólny</button>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="meta">Wyszukiwanie</div>
+      <div class="search" style="margin-top:6px">
+        <input id="q" placeholder="fraza… (Enter)" />
+        <button class="btn ghost" onclick="searchMessages()">Szukaj</button>
+      </div>
+      <div class="row" style="margin-top:6px">
+        <select id="authorFilter" style="flex:1">
+          <option value="">— Autor —</option>
+          <option>Królowa</option><option>Adrian</option><option>Emil</option><option>Pracownik</option>
+        </select>
+        <button class="btn ghost" onclick="clearSearch()">Wyczyść</button>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="meta">Online w pokoju</div>
+      <div id="presence" class="presence" style="margin-top:6px"></div>
+      <div id="typing" class="typing" style="margin-top:4px"></div>
+    </div>
+
+    <div class="section">
+      <div class="meta">Eksport</div>
+      <div class="row" style="margin-top:6px">
+        <button class="btn ghost" onclick="exportCSV()">CSV</button>
+        <button class="btn ghost" onclick="exportJSON()">JSON</button>
+        <button class="btn ghost" onclick="window.print()">Drukuj</button>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="meta">Ja</div>
+      <div class="row" style="margin-top:6px">
+        <span class="pill">Podpis: <b id="meName">—</b></span>
+        <button class="btn ghost" id="btnName">✎ Zmień</button>
+      </div>
+      <div class="meta" id="conn" style="margin-top:6px">łączenie…</div>
+    </div>
+  </aside>
+
+  <!-- PRAWO: STRONY -->
+  <main class="panel" id="page-chat" style="display:flex;flex-direction:column">
+    <div class="topbar">
+      <div class="row">
+        <div id="roomTitle"><b>—</b></div>
+        <span id="readBadge" class="badge" title="Lokalne potwierdzenia">✓✓</span>
+      </div>
+      <div class="toolbar">
+        <button class="btn ghost" onclick="toggleEmoji()">😊 Emoji</button>
+        <button class="btn ghost" onclick="document.getElementById('file').click()">📎 Załącz</button>
+        <input id="file" type="file" hidden>
+      </div>
+    </div>
+
+    <div id="msgs" class="msg-wrap" aria-live="polite">
+      <div class="loadmore hoverable" id="older" onclick="loadOlder()">⟲ Załaduj starsze…</div>
+    </div>
+
+    <div class="composer">
+      <div class="row" style="width:100%">
+        <textarea id="txt" placeholder="Napisz wiadomość… (Ctrl+Enter wysyła)" rows="2" style="flex:1"></textarea>
+      </div>
+      <div class="row">
+        <button id="btnSend" class="btn ok">Wyślij ▶</button>
+      </div>
+    </div>
+  </main>
+
+  <main class="panel" id="page-contracts" style="display:none;padding:16px">
+    <h2>📄 Umowy</h2>
+    <p class="meta">Tu możesz podpiąć generowanie/podpisywanie umów (np. fetch do Netlify Functions).</p>
+    <button class="btn" onclick="alert('TODO: generowanie umowy / integracja funkcji')">Nowa umowa</button>
+  </main>
+
+  <main class="panel" id="page-docs" style="display:none;padding:16px">
+    <h2>📂 Dokumenty</h2>
+    <p class="meta">Przegląd i pobieranie plików (Supabase Storage / Netlify Blobs).</p>
+    <button class="btn" onclick="alert('TODO: lista dokumentów z bazy / storage')">Odśwież listę</button>
+    <div id="docsList" style="margin-top:10px"></div>
+  </main>
+
+  <main class="panel" id="page-tasks" style="display:none;padding:16px">
+    <h2>✅ Zadania</h2>
+    <p class="meta">Prosty moduł zadań przypięty do pokoju (do rozbudowy).</p>
+    <button class="btn" onclick="alert('TODO: CRUD zadań w Supabase')">Dodaj zadanie</button>
+  </main>
+</div>
+
+<!-- Supabase UMD -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.45.4/dist/umd/supabase.js"></script>
 <script>
 'use strict';
@@ -20,9 +192,9 @@ let state = {
   me:   localStorage.getItem('chat_me')   || 'Pracownik',
   sub:null, presChan:null,
   typingTimer:null, typingViewTimer:null,
-  oldestCursor:null,
+  oldestCursor:null, // do paginacji w górę
   search:{ q:'', author:'' },
-  cache: new Map(),
+  cache: new Map(), // cache wiadomości po id
 };
 
 $('#meName').textContent = state.me;
@@ -34,8 +206,7 @@ function route(){
   const hash = location.hash || '#/chat';
   document.querySelectorAll('.tab').forEach(t=>t.classList.toggle('active', t.getAttribute('href')===hash));
   ['chat','contracts','docs','tasks'].forEach(id=>{
-    const el = $('#page-'+id);
-    el.style.display = (hash==='#/'+id) ? (id==='chat' ? 'flex' : 'block') : 'none';
+    $('#page-'+id).style.display = (hash==='#/'+id) ? 'block' : 'none';
   });
 }
 window.addEventListener('hashchange', route); route();
@@ -44,15 +215,11 @@ window.addEventListener('hashchange', route); route();
 let picker=null;
 function toggleEmoji(){
   if(picker){ document.body.removeChild(picker); picker=null; return; }
-  picker = el('div');
-  Object.assign(picker.style,{position:'fixed',bottom:'120px',right:'40px',background:'#0e1740',border:'1px solid #2b3a77',padding:'8px',borderRadius:'10px',zIndex:10});
+  picker = el('div'); picker.style.position='fixed'; picker.style.bottom='120px'; picker.style.right='40px';
+  picker.style.background='#0e1740'; picker.style.border='1px solid #2b3a77'; picker.style.padding='8px'; picker.style.borderRadius='10px'; picker.style.zIndex=10;
   picker.innerHTML = EMOJI.map(e=><span class="emoji" style="font-size:22px;padding:6px;cursor:pointer">${e}</span>).join('');
   picker.addEventListener('click', ev=>{
-    if(ev.target.classList.contains('emoji')){
-      $('#txt').value += ev.target.textContent;
-      document.body.removeChild(picker); picker=null;
-      $('#txt').focus(); sendTyping(true);
-    }
+    if(ev.target.classList.contains('emoji')){ $('#txt').value += ev.target.textContent; document.body.removeChild(picker); picker=null; $('#txt').focus(); sendTyping(true); }
   });
   document.body.appendChild(picker);
 }
@@ -76,7 +243,10 @@ async function joinPresence(){
   });
 
   chan.on('broadcast', { event:'typing' }, ({payload})=>{
-    const set = window._typingSet || new Set(); window._typingSet = set;
+    // payload: {user, on}
+    const key='typing:'+state.room;
+    const set = window._typingSet || new Set();
+    window._typingSet = set;
     if(payload.on) set.add(payload.user); else set.delete(payload.user);
     $('#typing').textContent = typingLabel([...set].filter(n=>n!==state.me));
     clearTimeout(state.typingViewTimer);
@@ -88,11 +258,13 @@ async function joinPresence(){
   });
 }
 function sendTyping(on){
-  try{ state.presChan?.send({ type:'broadcast', event:'typing', payload:{ user: state.me, on } }); }catch{}
+  try{
+    state.presChan?.send({ type:'broadcast', event:'typing', payload:{ user: state.me, on } });
+  }catch{}
 }
 
 /*** HISTORIA + PAGINACJA ***/
-let messages = [];
+let messages = []; // płaska lista + wątki (parent_id)
 function dayDivider(ts){
   return <div class="day"><span>${INT.format(new Date(ts)).split(',')[0]}</span></div>;
 }
@@ -100,8 +272,7 @@ function reactionBadge(emoji, count){ return <span class="react" data-r="${emoji
 function fileChip(url){
   const name = (url||'').split('/').pop();
   const isImg = /\.(png|jpe?g|gif|webp|bmp|svg)$/i.test(name);
-  return <a class="file" href="${url}" target="_blank" rel="noopener">📎 ${name}</a> +
-         (isImg? <div style="margin-top:6px"><img src="${url}" alt="" style="max-width:280px;border:1px solid #2b3a77;border-radius:10px"></div>:'');
+  return <a class="file" href="${url}" target="_blank" rel="noopener">📎 ${name}</a>${isImg?<div style="margin-top:6px"><img src="${url}" alt="" style="max-width:280px;border:1px solid #2b3a77;border-radius:10px"></div>:''};
 }
 function bubbleHtml(m, children=[]){
   const me = m.author===state.me;
@@ -112,7 +283,7 @@ function bubbleHtml(m, children=[]){
   <div class="msg" id="m-${m.id}">
     <div class="meta">${me?'Ja':(m.author||'—')}</div>
     <div class="bubble ${me?'me':''}">
-      ${m.deleted_at? '<i class="meta">[wiadomość usunięta]</i>' : body}
+      ${m.deleted_at? <i class="meta">[wiadomość usunięta]</i> : body}
       ${m.file_url? fileChip(m.file_url):''}
       <div class="tools">
         <button class="btn-icon" onclick="startReply('${m.id}')">💬 Odpowiedz</button>
@@ -130,14 +301,7 @@ function bubbleHtml(m, children=[]){
 }
 function indexByParent(list){
   const byId=new Map(), children=new Map();
-  list.forEach(m=>{
-    byId.set(m.id,m);
-    if(m.parent_id){
-      let arr = children.get(m.parent_id);
-      if(!arr){ arr=[]; children.set(m.parent_id,arr); }
-      arr.push(m);
-    }
-  });
+  list.forEach(m=>{ byId.set(m.id,m); if(m.parent_id){ (children.get(m.parent_id)||children.set(m.parent_id,[]).get(m.parent_id)).push(m); } });
   return { byId, children };
 }
 function renderMessages(scrollToBottom=true){
@@ -155,9 +319,9 @@ function renderMessages(scrollToBottom=true){
 }
 async function loadInitial(){
   const lim=60;
-  const { data, error } = await supa.from('messages')
-    .select('*').eq('room_id', state.room)
-    .order('created_at',{ascending:true}).limit(lim);
+  const f = supa.from('messages').select('*').eq('room_id', state.room)
+              .order('created_at',{ascending:true}).limit(lim);
+  const { data, error } = await f;
   if(error){ console.error(error); return; }
   messages = data||[];
   if(messages.length) state.oldestCursor = messages[0].created_at;
@@ -179,6 +343,7 @@ async function loadOlder(){
   older.forEach(m=>state.cache.set(m.id,m));
   const box = $('#msgs'); const prev = box.scrollHeight;
   renderMessages(false);
+  // zachowaj pozycję scrolla
   const diff = $('#msgs').scrollHeight - prev;
   box.scrollTop = diff;
 }
@@ -187,13 +352,13 @@ async function loadOlder(){
 async function subscribeRoom(){
   if(state.sub){ try{ await supa.removeChannel(state.sub);}catch{} }
   state.sub = supa.channel('room:'+state.room)
-    .on('postgres_changes',
-        { event:'INSERT', schema:'public', table:'messages', filter:'room_id=eq.'+state.room },
-        (p)=>{ messages.push(p.new); state.cache.set(p.new.id,p.new); renderMessages(true); ding(); })
-    .on('postgres_changes',
-        { event:'UPDATE', schema:'public', table:'messages', filter:'room_id=eq.'+state.room },
-        (p)=>{ const m=p.new; const i=messages.findIndex(x=>x.id===m.id); if(i>-1){ messages[i]=m; state.cache.set(m.id,m); renderMessages(false); } })
-    .subscribe((status)=>{ $('#conn').textContent = status==='SUBSCRIBED'?'podłączono':'…'+String(status).toLowerCase(); });
+    .on('postgres_changes',{event:'INSERT',schema:'public',table:'messages',filter:room_id=eq.${state.room}},(p)=>{
+      messages.push(p.new); state.cache.set(p.new.id,p.new); renderMessages(true); ding();
+    })
+    .on('postgres_changes',{event:'UPDATE',schema:'public',table:'messages',filter:room_id=eq.${state.room}},(p)=>{
+      const m=p.new; const idx=messages.findIndex(x=>x.id===m.id); if(idx>-1){ messages[idx]=m; state.cache.set(m.id,m); renderMessages(false); }
+    })
+    .subscribe((status)=>{ $('#conn').textContent = status==='SUBSCRIBED'?'podłączono':'…'+status.toLowerCase(); });
 }
 
 /*** WYSYŁANIE / ODP / REAKCJE / EDYCJA / KASOWANIE ***/
@@ -238,16 +403,12 @@ async function sendMessage(text, fileUrl){
 $('#file').addEventListener('change', async (e)=>{
   const f=e.target.files[0]; if(!f) return;
   try{
-    const safe = f.name.replace(/[^\w.-]+/g,'_');
-    const path = ${state.room}/${Date.now()}_${safe};
-    const up = await supa.storage.from('chat').upload(path, f, {
-      cacheControl:'3600', upsert:false, contentType: f.type || 'application/octet-stream'
-    });
+    const path=${state.room}/${Date.now()}_${f.name};
+    const up = await supa.storage.from('chat').upload(path, f, { upsert:false });
     if(up.error) throw up.error;
-    const { data:{ publicUrl } } = supa.storage.from('chat').getPublicUrl(path);
-    await sendMessage('', publicUrl);
+    const pub = supa.storage.from('chat').getPublicUrl(path);
+    await sendMessage('', pub.data.publicUrl);
   }catch(err){
-    console.error(err);
     if(f.size <= 1024*1024){
       const reader=new FileReader();
       reader.onload = async ()=>{ await sendMessage('', reader.result); };
@@ -335,3 +496,5 @@ $('#btnName').addEventListener('click', ()=>{
   }
 })();
 </script>
+</body>
+</html>
